# leaf_down

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  res_config.json
res/: res_confg.json.bak  res_config2.json
src/: App.vue  core.rs  loader.rs  main.rs  searcher.rs
src-tauri/: .gitignore  Cargo.toml  res_config.json  tauri.conf.json
src-tauri/config/: res_1.json  res_3.json
src-tauri/src/: lib.rs  loader.rs  main.rs
src-tauri/src/loader/: book.rs  err.rs  init.rs  mod.rs  res_config.rs  search.rs
src-tauri/tests/: down_test.rs  search_test.rs  test.rs
src/core/: parser.rs
src/loader/: book.rs  err.rs  res_config.rs
src/parser/: book.rs
src/searcher/: book.rs  res_config.rs
tests/: test.rs
